# cookiecutter-data-science

./: README.md
{{ cookiecutter.repo_name }}/: .devcontainer.json  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.repo_name }}/src/utilities/: logging.py  util.py
